# homeassistant-roborock

./: .gitignore  README.md  hacs.json  info.md  inlang.config.js  login.py  package.yaml  project.inlang.json  pyproject.toml  requirements-dev.txt  requirements.txt  ruff.toml  test.py
.devcontainer/: configuration.yaml  devcontainer.json
.github/: dependabot.yml  labels.toml
.github/ISSUE_TEMPLATE/: feature_request.md  issue.md
.github/workflows/: HACS.yaml  hacs.yaml  hassfest.yaml  lint.yml  release.yml  validate.yml
custom_components/: __init__.py
custom_components/roborock/: __init__.py  api.py  binary_sensor.py  button.py  calendar.py  camera.py  config_flow.py  const.py  coordinator.py  device.py  domain.py  manifest.json  number.py  recorder.py  roborock_typing.py  select.py  sensor.py  services.yaml  strings.json  switch.py  time.py  typing.py  utils.py  vacuum.py
custom_components/roborock/api/: __init__.py  api.py  backoff_strategy.py  cli.py  containers.py  exceptions.py  roborock_queue.py  typing.py  util.py
custom_components/roborock/common/: image_handler.py  map_data.py  map_data_parser.py
custom_components/roborock_new/: __init__.py  button.py  calendar.py  const.py  coordinator.py  manifest.json  sensor.py  time.py
custom_components/roborock_old/: const.py  manifest.json  number.py  utils.py  vacuum.py
tests/: __init__.py  common.py  conftest.py  mock_data.py  requirements.txt  test_binary_sensor.py  test_camera.py  test_config_flow.py  test_platform.py  test_select.py  test_sensor.py  test_vacuum.py
(+24 files in other folders)
