[tool.poetry]
name = "homeassistant-roborock"
version = "0.1.0"
description = ""
authors = ["humbertogontijo <humbertogontijo@users.noreply.github.com>"]
readme = "README.md"
repository = "https://github.com/humbertogontijo/python-roborock"

[tool.poetry.dependencies]
python = "^3.10"
homeassistant = "*"
voluptuous = "^0.13.1"
python_roborock = "^0.9.0"

[tool.poetry.dev-dependencies]
pytest = "^7.2.1"
Pillow = "~9.4.0"
pytest_homeassistant_custom_component = "~0.12.46"
aiohttp_cors = "~0.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

